k3-storage-rbac-networking/netpol-mlops.yaml
# netpol-mlops.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mlops-isolation
  namespace: mlops
spec:
  podSelector: {}          # applies to ALL pods in mlops namespace
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring   # allow Prometheus scrape
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system  # allow DNS
      ports:
        - protocol: UDP
          port: 53
